plugins {
    id 'dev.architectury.loom' version '1.13-SNAPSHOT' apply false
    id 'architectury-plugin' version '3.4-SNAPSHOT'
    id 'com.github.johnrengelman.shadow' version '8.1.1' apply false
}

architectury {
    minecraft = project.minecraft_version
}

allprojects {
    apply plugin: "architectury-plugin"
    apply plugin: "java"


    architectury {
        compileOnly()
    }

    group = rootProject.maven_group
    version = rootProject.mod_version
    java {
        withSourcesJar()
    }
}

subprojects {
    apply plugin: 'dev.architectury.loom'
    apply plugin: 'architectury-plugin'
    apply plugin: 'maven-publish'
    apply plugin: 'java'

    base {
        archivesName = "${rootProject.archives_name}-${project.name}-${rootProject.minecraft_version}"
    }

    repositories {
        mavenCentral()
        maven {
            name = "Jared's maven"
            url = "https://maven.blamejared.com/"
        }
    }

    dependencies {
        minecraft "net.minecraft:minecraft:$rootProject.minecraft_version"
        mappings loom.officialMojangMappings()

        implementation "cn.6tail:lunar:1.7.3"
        implementation "de.marhali:json5-java:3.0.0"
        if (project.name != "forge") {
            implementation "com.electronwill.night-config:toml:3.8.3"
        }

        if (project.name == "fabric") {
            implementation("org.mvel:mvel2:2.5.0.Final")
        }
        if (project.name == "neoforge" || project.name == "forge") {
            implementation("org.mvel:mvel2:2.5.0.Final")
        }
        if (project.name == "common-api") {
            implementation "org.mvel:mvel2:2.5.0.Final"
        }

        if (project.name != "common-api") {
            annotationProcessor project(path: ':common-api')
        }
    }

    java {
        withSourcesJar()
        sourceCompatibility = JavaVersion.VERSION_17
        targetCompatibility = JavaVersion.VERSION_17
    }

    tasks.withType(JavaCompile).configureEach {
        it.options.release = 17
    }

    tasks.withType(Jar).configureEach {
        duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    }
    tasks.named("sourcesJar", Jar).configure {
        exclude("META-INF/services/**")
    }

    publishing {
        repositories {
            def modVersion = project.findProperty('mod_version') ?: 'unknown'

            boolean isSnapshot = modVersion.toLowerCase().contains('snapshot')

            def publishUrl = isSnapshot ?
                    "https://maven.sighs.cc/repository/maven-snapshots/" :
                    "https://maven.sighs.cc/repository/maven-releases/"

            def publishUser = System.getenv("SIGHS_PUBLISH_USER")
            def publishPassword = System.getenv("SIGHS_PUBLISH_PASSWORD")

            maven {
                name = "remoteRepo"
                url = uri(publishUrl)
                credentials {
                    username = publishUser
                    password = publishPassword
                }
            }
        }
    }
}

subprojects {
    if (project.path == ':fabric' || project.path == ':forge') {
        loom {
            mods {
                main {
                    sourceSet project.sourceSets.main
                    sourceSet project(":common-api").sourceSets.main
                }
            }
        }
    }
}